Tue Apr 22 08:29:33 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Make x.2.6 public

        * etc/ciao.doxygen:
        * etc/ciao_dds4ccm.doxygen:
          Handle pidl files as idl files

Tue Apr 22 08:44:41 CEST 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.2.6 released.

Wed Mar 26 01:39:54 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DAnCE/StoreReferences/run_test.pl:
          Fixed return value of the script itself

Tue Mar 25 00:42:50 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Fixed compile errors with unicode enabled

Sun Mar 23 13:04:16 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.h:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Remove registration from the naming service in the
          post remove. Thanks to Michael Frommberger
          <michael dot frommberger at gmx dot net> for providing this patch

        * tests/DAnCE/StoreReferences/client.cpp:
        * tests/DAnCE/StoreReferences/run_test.pl:
          Small changes to make sure the test runs now perfect with the
          patch integrated

Sat Mar 22 13:39:42 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * tests/DAnCE/StoreReferences/DeploymentPlan.cdp:
        * tests/DAnCE/StoreReferences/StoreReferences.idl:
        * tests/DAnCE/StoreReferences/StoreReferences.mpc:
        * tests/DAnCE/StoreReferences/StoreReferences_exec.h:
        * tests/DAnCE/StoreReferences/StoreReferences_exec.cpp:
        * tests/DAnCE/StoreReferences/client.cpp:
        * tests/DAnCE/StoreReferences/run_test.pl:
          Integrate unit test for bugzilla 4106, thanks to
          Michael Frommberger <michael dot frommberger at gmx dot net>
          for creating this
